// ── application 모듈: 실행 주체 ─────────────────────────────
plugins {
    id 'java'
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.4"
    }
}

// 실행 주체: bootJar(fat jar)만 생성
bootJar { enabled = true  }
jar     { enabled = false }

// lombok을 compileOnly + annotationProcessor 동시 인식
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    // ── db 모듈 ──────────────────────────────────────────────
    // db 모듈이 api로 선언한 spring-boot-starter-data-jpa가
    // 여기로 전이됨 → @Transactional, @Entity, JpaRepository 사용 가능
    implementation project(':db')

    // ── Web ──────────────────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-web'

    runtimeOnly 'com.mysql:mysql-connector-j'

    // ── Security + OAuth2 ────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // ── Validation ───────────────────────────────────────────
    // jakarta.validation.constraints.* (@NotBlank, @Size, @Valid 등)
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // ── JWT (BOM 미포함 → 버전 직접 지정) ────────────────────
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // ── Lombok (버전은 BOM 관리) ──────────────────────────────
    compileOnly         'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ── Test ─────────────────────────────────────────────────
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}
